# bevy_ascii_snake

./: Cargo.toml  LICENSE  README.md  bevy_ascii_snake-525aeb71b5b1dd57.js  bevy_ascii_snake-9ea551afe418766b.js  bevy_ascii_snake-b992cdb63828a62.js  bevy_ascii_snake-c2de13a11ae74d58.js  index.html
.github/workflows/: release.yaml
src/: main.rs  window.rs
