[package]
name = "bevy_ascii_snake"
version = "0.2.0"
publish = false
authors = ["Sark"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_state", "webgl2", "bevy_audio", "wav"] }
rand = { version = "0.8.3" }
bevy_ascii_terminal = "0.16"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"